[package]
name = "grade_scraper"
version = "0.1.0"
authors = ["dani <danielorihuelarodriguez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking", "cookies"] }
select = { version = "0.5.0" }
regex = { version = "1.4.5" }
rpassword = { version = "5.0.0" }
text_io = { version = "0.1.8" }